# loan-payoff

./: Cargo.toml  README.md  about.html  index-14b0a99b1a4c1e2.js  index-14b0a99b1a4c1e2_bg.wasm  index-1c5a45a4ed3c66d9.js  index-1c5a45a4ed3c66d9_bg.wasm  index-3496a734e68ed201.js  index-3496a734e68ed201_bg.wasm  index-3e81337d87ffac11.js  index-3e81337d87ffac11_bg.wasm  index-497758466a8f2658.js  index-497758466a8f2658_bg.wasm  index-4a983ab0121ff267.js  index-4a983ab0121ff267_bg.wasm  index-4c9772efa173c0af.js  index-4c9772efa173c0af_bg.wasm  index-52190142427361fc.js  index-52190142427361fc_bg.wasm  index-6fae9f8d28f95100.js  index-6fae9f8d28f95100_bg.wasm  index-8039ffade6305d14.js  index-8039ffade6305d14_bg.wasm  index-ad2574027b92ed28.js  index-ad2574027b92ed28_bg.wasm  index-bb0e6e98be453ef0.js  index-bb0e6e98be453ef0_bg.wasm  index-cdb19ee5b487efbf.js  index-cdb19ee5b487efbf_bg.wasm  index-d020bb2d18f037ee.js  index-d020bb2d18f037ee_bg.wasm  index-d2e9f11dd3c7a9e.js  index-d2e9f11dd3c7a9e_bg.wasm  index-f4599904e43a3e03.js  index-f4599904e43a3e03_bg.wasm  index.html  rustfmt.toml
.github/workflows/: main.yml
loan-payoff/: Cargo.toml
loan-payoff-cli/: Cargo.toml
loan-payoff-cli/data/: example.csv
loan-payoff-cli/src/: main.rs
loan-payoff-web-ui/: Cargo.toml  index.html
loan-payoff-web-ui/src/: main.rs
loan-payoff-web-ui/src/components/: event_bus.rs  loan.rs  loans.rs  mod.rs
loan-payoff/src/: lib.rs
loan-payoff/tests/: integration_test.rs
src/: loans.rs  main.rs
