[package]
name = "loan-payoff-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
loan-payoff = { path = "../loan-payoff" }
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "2.1.0"
