[package]
name = "loan-payoff-web-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1"
loan-payoff = { path = "../loan-payoff" }
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
yew = "0.19.3"